# Space-Game

./: .gitignore  CMakeLists.txt  License.txt  README.md  brew_dependencies.sh  compile.sh
cmake/: FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
include/: App.hpp  Asteroid.hpp  AsteroidManager.hpp  Background.hpp  Bullet.hpp  Destructible.hpp  EnemyShip.hpp  GameModifier.hpp  Life.hpp  LifeManager.hpp  MenuScreen.hpp  RSConstants.hpp  Ship.hpp  SoundFX.hpp  Sprite.hpp  Stats.hpp  boost  utils.hpp
psp/: Makefile.psp
resources/: Credits.txt
resources/img/: Credits.txt
rocket-shooter-android/: .project  AndroidManifest.xml  TODO.txt  build.xml
rocket-shooter-android/assets/: Credits.txt  sounds
rocket-shooter-android/jni/: Application.mk  SDL2-2.0.3  SDL2_image-2.0.0  SDL2_mixer-2.0.0  SDL2_ttf-2.0.12
rocket-shooter-android/jni/include/: Asteroid.hpp  AsteroidManager.hpp  Background.hpp  Bullet.hpp  Destructible.hpp  GameModifier.hpp  Life.hpp  LifeManager.hpp  MenuScreen.hpp  RSConstants.hpp  Ship.hpp  SoundFX.hpp  Sprite.hpp  Stats.hpp  boost  utils.hpp
rocket-shooter-android/jni/src/: Android.mk  Asteroid.cpp  AsteroidManager.cpp  Background.cpp  Bullet.cpp  Destructible.cpp  GameModifier.cpp  Life.cpp  LifeManager.cpp  MenuScreen.cpp  Ship.cpp  SoundFX.cpp  Sprite.cpp  Stats.cpp  main.cpp
rocket-shooter-android/res/values/: strings.xml
rocket-shooter-android/src/org/dandan/rocket/: MyActivity.java
src/: App.cpp  Asteroid.cpp  AsteroidManager.cpp  Background.cpp  Bullet.cpp  EnemyShip.cpp  GameModifier.cpp  Life.cpp  LifeManager.cpp  MenuScreen.cpp  Ship.cpp  SoundFX.cpp  Sprite.cpp  Stats.cpp  main.cpp
